fix overlap, popover placement in different calendar views

--- a/rootio/static/css/schedule.css
+++ b/rootio/static/css/schedule.css
@@ -38,3 +38,10 @@
     margin-bottom:10px;
     float:left;
 }
+
+.popover {
+    z-index: 10;
+}
+.tooltip {
+    z-index: 10;
+}
